# quant-alpha

./: .gitignore  DEMO.md  PLAN.md  PORTFOLIO_BACKTEST_INTEGRATION_PLAN.md  README.md  SPEC.md  ablation.py  api.py  backlog.md  backtest.py  backtest_5m.py  build_demo.py  build_factor_5m_demo.py  download_data.py  factors_5m.py  gemini_researcher.py  holdout.py  idea.md  ingest_5m.py  market_data_5m.py  portfolio_5m.py  prompt.md  pyproject.toml  research.py  routing.py  run_demo.sh  strategies.py  walkforward.py  walkforward_5m.py
alpha101/: .gitignore  README.md  alpha_engine.py  build_panels.py  bulk_download.py  configs_backtest.py  fetch_reference.py  plot_alphas.py  plot_configs.py  requirements.txt  run_alphas.py  stats.py
data/: AAPL_1d.csv  AMZN_1d.csv  DIS_1d.csv  GOOGL_1d.csv  HD_1d.csv  JNJ_1d.csv  JPM_1d.csv  KO_1d.csv  META_1d.csv  MSFT_1d.csv  NVDA_1d.csv  PG_1d.csv  SPY_1d.csv  WMT_1d.csv  XOM_1d.csv
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: BasketHeatmap.tsx  Holdout.tsx  ImprovementArc.tsx  OverfitReveal.tsx  ResearchFeed.tsx  TradingSimulator.tsx  VerdictBadge.tsx
frontend/lib/: api.ts
lab/: build_antigravity_alphas.py  build_research_cache.py  config.py  robustness.py  run_experiment.py  seeds.py  tests.py  validate_seeds.py
resources/: hackathon.md
server/: api.py
tests/: conftest.py  test_api_5m.py  test_factors_5m.py  test_market_data_5m.py  test_portfolio_backtest_5m.py  test_provider_ingest_5m.py  test_walkforward_5m.py
(+44 files in other folders)
